// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 1`] = `null`;

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 2`] = `
<div>
  <div>
    <div
      class="bpk-scrim-content bpk-modal__container"
    >
      <div
        class="bpk-scrim"
        role="presentation"
      />
      <section
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-modal"
        id="my-modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="bpk-modal__content bpk-modal__content--padded"
        >
          <button
            aria-label="Close"
            class="bpk-close-button bpk-dialog__close-button"
            title="Close"
            type="button"
          >
            <svg
              class="bpk-close-button__icon"
              height="18"
              style="width: 1.125rem; height: 1.125rem;"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.56 3.44a1.5 1.5 0 1 0-2.12 2.12L9.878 12l-6.44 6.44a1.5 1.5 0 0 0 2.122 2.12L12 14.122l6.44 6.44a1.5 1.5 0 0 0 2.12-2.122L14.122 12l6.44-6.44a1.5 1.5 0 0 0-2.122-2.12L12 9.878l-6.44-6.44z"
              />
            </svg>
          </button>
          Dialog content inside a custom target
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`BpkDialog should render correctly when it is not dismissible 1`] = `null`;

exports[`BpkDialog should render correctly when it is not dismissible 2`] = `
<div>
  <div>
    <div
      class="bpk-scrim-content bpk-modal__container"
    >
      <div
        class="bpk-scrim"
        role="presentation"
      />
      <section
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-modal"
        id="my-modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="bpk-modal__content bpk-modal__content--padded"
        >
          Dialog content inside a custom target
        </div>
      </section>
    </div>
  </div>
</div>
`;
